[Folder View] Fix supported drag actions

SetSupportedDragActions is deprecated and doesn't seem to work.
This fixes modifier shortcuts for dragging, e.g. dragging with Ctrl+Shift to create a link.

BUG: 382797
FIXED-IN: 5.11.0

Differential Revision: https://phabricator.kde.org/D7798